# sensory

./: meson.build  run.sh
src/: Application.vala  Debug.vala  GraphPanel.vala  GraphWidget.vala  MainWindow.vala  Sensor.vala  SensorModel.vala  SensorTreeStore.vala  SensorTreeView.vala  SensorView.vala  SensorViewModel.vala
src/graph/: ColorManager.vala  GraphProfile.vala  GraphWidget.vala  TimeSeriesData.vala
src/model/: ChipFeature.vala  ChipSubFeature.vala  SensorChip.vala
vapi/: libsensors.vapi
